[package]
name = "tac-lookup"
version = "0.1.0"
edition = "2024"
description = "Retrieves device information from the Osmocom TAC database, private and fully offline"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"]}
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }
csv = "1.4.0"
anyhow = "1.0.102"
directories = "6.0.0"
colored = "3.1.1"
